[tool.poetry]
name = "repl_python3_ditdit"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
pyTelegramBotAPI = "^3.7.7"
lxml = "^4.6.3"
urllib3 = "^1.26.4"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
